# Noto

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.json
Noto/server/: .env.example  config.py  main.py  pyproject.toml
Noto/server/models/: schemas.py
Noto/server/prompts/: card_extraction.md  distill_doc_summary.md  distill_space_skeleton.md  evaluate_explanation.md  report.md  socratic.md  socratic_card.md
Noto/server/routers/: ai.py  cards.py  chat.py  highlights.py  ingest.py  notebooks.py  report.py  review.py  skeleton.py
Noto/server/services/: distill.py  document.py  evaluate.py  prompts.py  retrieval.py  sm2.py  supabase_client.py
Noto/server/services/ai/: anthropic_provider.py  base.py  embedding.py  google_provider.py  manager.py  openai_provider.py  utils.py
Noto/server/tests/: test_ai_manager.py  test_ai_routes.py  test_anthropic_provider.py  test_cards_routes.py  test_config.py  test_distill_doc.py  test_distill_skeleton.py  test_document.py  test_embedding.py  test_evaluate.py  test_google_provider.py  test_ingest_routes.py  test_openai_provider.py  test_retrieval.py  test_sm2.py  test_smoke.py
Noto/server/tests/fixtures/: sample.txt
Noto/supabase/: README.md
Noto/supabase/migrations/: 0001_init.sql  0002_v2_schema.sql
Noto/web/: index.html  package-lock.json  package.json  tsconfig.json
Noto/web/src/: App.tsx  styles.css
doc/: deep-research-report.md
docs/superpowers/plans/: 2026-04-27-noto-v1.md  2026-04-28-noto-v2.md
docs/superpowers/specs/: 2026-04-27-noto-design.md  2026-04-28-noto-v2-design.md
(+28 files in other folders)
