[project]
name = "noto-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-dotenv>=1.0",
  "supabase>=2.7",
  "pypdf>=5.0",
  "python-docx>=1.1",
  "markdown-it-py>=3.0",
  "openai>=1.50",
  "anthropic>=0.40",
  "google-genai>=0.5",
  "httpx>=0.27",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["routers", "services", "services.ai", "models"]
py-modules = ["main"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
testpaths = ["tests"]
